# FS-Score

./: CMakeLists.txt  LadiesFSWindow.cpp  LadiesFSWindow.h  LadiesSPWindow.cpp  LadiesSPWindow.h  README.md  Score.h  ScoreRepository.cpp  ScoreRepository.h  main.cpp  mainGUI.cpp  mainGUI.h  resources.qrc.txt  sp rules.txt
Exception/: ElementException.cpp  ElementException.h
GUI/: mainGUI.cpp  mainGUI.h
Ladies/: LadiesFSWindow.cpp  LadiesFSWindow.h  LadiesSPWindow.cpp  LadiesSPWindow.h
Model/: Element.cpp  Element.h  Score.cpp
Model/Singles/: ChoreoSequence.cpp  ChoreoSequence.h  Jumps.cpp  Jumps.h  Spins.cpp  Spins.h  StepSequence.cpp  StepSequence.h
Repository/: ElementsRepo.cpp  ElementsRepo.h
Service/: ScoreService.cpp  ScoreService.h
